<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AutoClickerScreen"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18">

        <Button
            android:id="@+id/OpenOverlayStartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StartButton"
            android:textColor="?attr/buttonTextColor" />

        <Button
            android:id="@+id/SaveFileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SaveFileButton"
            android:textColor="?attr/buttonTextColor" />

        <Button
            android:id="@+id/AppSettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SettingsButton"
            android:textColor="?attr/buttonTextColor"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>