<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PermissionSettingText"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AppSettingsScreen" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintBottom_toTopOf="@id/appColorSettingsLayout">

        <Button
            android:id="@+id/permissionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PermissionButton"
            android:textColor="?attr/buttonTextColor"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/appColorSettingsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AppColor"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/appColorSettingsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/buttonLayout"
        app:layout_constraintBottom_toTopOf="@id/buttonColorSettingsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/selectLightTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Light"
                android:textColor="?attr/android:textColor"/>
            <RadioButton
                android:id="@+id/selectDarkTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="10dp"
                android:text="@string/Dark"
                android:textColor="?attr/android:textColor"/>
        </RadioGroup>
        <Button
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Apply"
            android:textColor="?attr/buttonTextColor"
            android:layout_gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonColorSettingsLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonColor"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonColorSettingsLayout"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/navigationLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appColorSettingsLayout">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/PressGraphic"
                app:srcCompat="@drawable/press_graphic" />
            <TextView
                android:id="@+id/graphicText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GraphicText"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"/>
        </FrameLayout>


        <LinearLayout
            android:id="@+id/buttonColorClickLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/buttonColorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <View
                    android:id="@+id/buttonColorView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@color/black"
                    android:contentDescription="@string/ButtonColor" />

                <TextView
                    android:id="@+id/buttonColorTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/OutlineColor" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bgColorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <View
                    android:id="@+id/bgColorView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="#21000000"
                    android:contentDescription="@string/BGColor" />

                <TextView
                    android:id="@+id/bgColorTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/BGColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/textColorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <View
                    android:id="@+id/textColorView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@color/black"
                    android:contentDescription="@string/TextColor" />

                <TextView
                    android:id="@+id/textColorTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/TextColor" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigationLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/backButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BackButton"
            android:textColor="?attr/buttonTextColor"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>